# llm-psychology

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_statistical_learning_example.ipynb  02_visualisation_features.ipynb  03_rag_local_memory.ipynb  04_xrag_compression_rocstories.ipynb
src/llm_psychology/: __init__.py
src/llm_psychology/data/: __init__.py  family_tree.py  rocstories.py  spatial.py  statistical_learning.py
src/llm_psychology/eval/: __init__.py  behavioural.py  perplexity.py  recall.py
src/llm_psychology/models/: generate.py  loaders.py
src/llm_psychology/rag/: embed.py  memory.py  pipeline.py  retrieve.py
src/llm_psychology/reps/: __init__.py  extractor.py
src/llm_psychology/train/: __init__.py  tokenizers.py  trainer.py
src/llm_psychology/viz/: __init__.py  attention.py  pca.py  relational_pca.py
src/llm_psychology/xrag/: __init__.py  compression.py  modeling.py  native.py
tests/: test_imports.py  test_tasks_and_recall.py  test_trainer_smoke.py  test_xrag.py
